--- a/gb/23/8/25/n14060932.md
+++ b/gb/23/8/25/n14060932.md
@@ -20,10 +20,6 @@
 <p>醒吾科大应英系主任兼维谦基金会执行长张煜权表示，鹅尾山水田的复育计划是4年前由农田水利署七星管理处周师文处长发起，工务局大地工程处纳入区域整合规划，结合了七星管理处、维谦基金会、财团法人台北市七星农田水利研究发展基金会、平等里办公处、平等国小及许多在地团队的共同合作努力的成果，是相当成功的“公私协力”模式，对于平等社区发展有重大意义。</p>
 <p>透过插秧及收割活动的举办，让台北市民能看见山林的美丽及体验到田园的农事，是最好的环境教育场域。日本越光米在新潟南鱼沼产地的米质相当受到欢迎，而位在平等里的鹅尾山水田与南鱼沼产地一样，有着充足的日光、排水良好的梯田地形与优良的山泉水灌溉，期待鹅尾山水田未来也能生产出跟南鱼沼一样的好吃的米，再邀请明治大学的师生一起来品尝。◇</p>
 <p>责任编辑：唐音</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/17/n2879788.md#1">日明治大学抢台生 拟采计学测</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/12/12/11/n3749863.md#1">日大学考生报考忙 明治大学人气旺</a></li>
@@ -32,40 +28,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14039218.md#1">出磺坑文化资产教材 现地教学国中小教案大放送</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055277.md#1">虎尾中元文化祭开跑 争取列入无形文化资产</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055864.md#1">云县推动文化资产保存有成 获中央2亿多万元修复补助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061017.md#1">桃市扩大肺癌筛检 重度吸烟史者家人踊跃受检</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060917.md#1">智慧桃园向下扎根 张善政率团赴Google取经</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060859.md#1">健康伙伴 北荣桃园分院职场健康安全新里程碑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105876.md#1">桃园“检调警环”跨域联盟  携手打击环保犯罪</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105872.md#1">桃园枫树国小通学廊道改善完成 花小钱大效果</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105863.md#1">户所电子化支付方式再＋1 缴纳规费可扫台湾Pay</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/4/n10360803.md#1" target="_blank">共产暴政录：统购统销洗劫中国农民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14051156.md#1">带你认识六大茶系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049845.md#1">【古道人生】丈夫试测妻子是否忠心 结果酿成大祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056411.md#1">七夕情话响千代  天神护祐得真福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060698.md#1">【菁英论坛】全球忧遭中共拖累 习隐身谋大清洗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059554.md#1">【中国禁闻】习意外缺席金砖峰会论坛 全球猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060539.md#1">【新闻大破解】中国经济倒退 美熊猫派路线结束</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059514.md#1">习近平临时缺席金砖峰会论坛 引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059468.md#1">中国经济陷困境 前中共政协委员不点名批习</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059800.md#1">普里戈津乘坐的飞机失事 无人生还</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059068.md#1">前央视名嘴崔永元摆摊卖字画 憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058450.md#1">《好声音》再被爆黑幕 潘玮柏椅子莫名自转身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059184.md#1">吴凤飞维也纳被拦下 秀中华民国护照秒通关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059682.md#1">帮AKIRA庆祝42岁 林志玲甜喊：Baby生日快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059041.md#1">“最美小龙女”李若彤57岁生日 推出人生首支歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059503.md#1">不用除草剂 专家教你如何迅速除去杂草</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058568.md#1">人在太空旅行中死亡 遗体应该如何处理？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058691.md#1">为了能好好休息 登机后要问空服员这个问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14056838.md#1">贫血就喝这碗汤 2个食疗方让肠胃造出好血液</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059650.md#1">抗氧化“水果皇后”荔枝 这样吃防过敏、中毒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/25/n14060932.htm">明治大学师生 溽暑体验稻浪栈道下收割乐趣</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060932.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
