--- a/gb/23/9/6/n14068065.md
+++ b/gb/23/9/6/n14068065.md
@@ -18,52 +18,42 @@
 <p>市府工务处长苏文崎表示，“文化新丝路2.0”由工务处肩负推动工作，计划基地横跨东、西区，结合水利、文化、知识中心、休憩场域，基地丰富多元可期。工务处积极整合各部门产生连结，彼此之间做折衷，过程虽艰辛，我们仍乐于结合设计单位、中央、地方共同构思，提高层次先盘点后定位、择定扮演角色功能，循序渐进推动计划，为嘉义市未来发展做努力，才能使实体建设更踏实往前迈进，迎向未来大挑战。</p>
 <p>市府工务处说明，本次研讨会透过都市公共空间新生与城市缝合之案例分享，结合国立阳明交通大学“城市设计与总图书馆研究规划计划”成果展共同办理，以不同时间及空间尺度观点下剖析嘉义市的特色、潜力与限制，进而擘划未来城市空间发展的愿景、目标及方向。</p>
 <p>责任编辑：郑桦</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066651.md#1">赖香伶关切行人与交通安全 吁建立停、让文化</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067014.md#1">加拿大首都多元文化节 主流人士赞赏法轮功</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067060.md#1">来北约克美食节 体验文化美食与娱乐的碰撞</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067575.md#1">台风海葵影响南岛语族文化座谈会 但文化交流不停歇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068038.md#1">嘉市眼科动起来协力推AI技术 守护幼儿视力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067963.md#1">节能教育从小扎根 小店长节电体验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067934.md#1">拍到黑熊误触猎具成功脱逃 颁五万元奖励金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067606.md#1">“云林县传统工艺展”15位艺师齐展“厚工”之美</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067438.md#1">112年斗六地区文旦节品质评鉴 斗六文旦再次蝉联冠军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067371.md#1">112年嘉义市环境好嘉绘 绘本征选结果公布</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105953.md#1">爱的种子已播下 期待云林莿桐花海盛开</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105931.md#1">乐见浊水溪改善沙尘 居民生活品质提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105857.md#1">眭澔平领桃城女子遨游世界 赢得黄金三学分</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105836.md#1">嘉义县定古迹阿里山贵宾馆  蒋公曾设为行馆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105586.md#1">长庚医院院庆 全台三地举办永庆杯路跑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105423.md#1">单亲发展迟缓生天天苦练 成为叠杯特教国手</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/3/n10359777.md#1" target="_blank">张立先：拜谒李庄</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066098.md#1">奥地利女子转生为邻居的儿子 过世前就预告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063481.md#1">日本礼法之形成与社会功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067602.md#1">【拍案惊奇】中国股市 你还敢往里跳吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067646.md#1">【秦鹏观察】华为突破美封锁？大陆专家如何说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066374.md#1">【未解之谜】深度解读《黄檗禅师诗》（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066625.md#1">为节省路程 两名工人挖断明长城</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060092.md#1">混动车和电动车 哪六种维修费用最贵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066620.md#1">华为突推新机 专家：秘制芯片难成气候</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066400.md#1">悲观发文后帅气现身 胡歌与梁朝伟合照露灿笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067033.md#1">赵薇“被消失”2年多 亲哥哥赵健曝她近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067059.md#1">停播一周 节目单惊现《好声音》播出资讯网炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066410.md#1">演唱会上蚊子飞进嘴里 李荣浩的反应笑翻歌迷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066437.md#1">如何决定接拍一部电影？梁朝伟：随命运安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14059961.md#1">耳鸣背后原因不简单！中医治耳鸣2招切中要害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066785.md#1">汽车生锈怎么去除？ 用这种饮料几秒见效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066217.md#1">老是缩小腹 竟然有害身体？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066357.md#1">基隆和平岛戏水 寻找奇岩怪石</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062026.md#1">姜黄治炎症、疼痛、发烧 3种药剂急救法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/6/n14068065.htm">嘉市十大旗舰计划文化新丝路2.0  闪亮登场</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068065.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
