--- a/gb/23/10/25/n14102784.md
+++ b/gb/23/10/25/n14102784.md
@@ -52,11 +52,11 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101098.md#1">美众院9名共和党人竞选议长 周二再投票</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101651.md#1">美众议员默瑟退选 8共和党人角逐议长职位</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105632.md#1">美非法移民危机 弗州州长：每个州都是边境州</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105738.md#1">提前投票头两天 法拉盛票站冷清</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105951.md#1">17名中国人偷渡佛州礁岛被捕 美议员示警</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105867.md#1">美联邦法官重颁禁言令 阻川普公开谈论案情</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/28/n11415356.md#1" target="_blank">共产暴政录：岳父全家被杀 盛世才本人善终</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/27/n9898377.md#1" target="_blank">折断的蝴蝶翅膀──慈禧御前女官舞蹈家裕容龄</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
