--- a/gb/23/9/23/n14079780.md
+++ b/gb/23/9/23/n14079780.md
@@ -14,10 +14,6 @@
 <figure id="attachment_14079784" aria-describedby="caption-attachment-14079784" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079784-637237.jpg"><img class="size-large wp-image-14079784" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079784-637237-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14079784" class="wp-caption-text">公私场所的裸露区域、生产制程、物料堆置、输送作业及车辆运输是粒状污染物的主要排放来源。（嘉义市政府提供）</figcaption></figure>
 <p>嘉义市政府环境保护局表示，公私场所的裸露区域、生产制程、物料堆置、输送作业及车辆运输是粒状污染物的主要排放来源，目前新制法规已修正发布，将预先辅导嘉义市公私场所因应调整，以避免业者于管理办法正式施行时因不符合规定而受罚。该局提醒，如对管理办法新修正内容仍有疑问者，可洽询该局专线05-2251775转分机215，由专人为您服务。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938866.md#1">环保局暂停清除俄亥俄州火车脱轨现场污染物</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066027.md#1">新发明：“智能铁锈”和磁铁清洁水中污染物</a></li>
@@ -25,41 +21,35 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076840.md#1">112年环境知识竞赛嘉义市初赛颁奖</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077760.md#1">嘉义市严禁液蛋进入校园 把关师生健康安全</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079179.md#1">嘉义市112年教师节表扬大会 郑秀燕获师铎奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079789.md#1">屏东工厂大火 周春米：全力救灾成立联合善后平台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079735.md#1">纸墨相发 夏沧琪凤月宣暨陈政见书艺联展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079680.md#1">屏东工厂爆炸 酿6死消防员殉职4失联</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079377.md#1">加油送文旦 台塑企业挺农民 行销云林文旦</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106166.md#1">侯芳昀获大溪国际木家具工艺设计竞赛铜奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106174.md#1">云林县议长补选 无党籍黄凯高票当选</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106056.md#1">茂林国家风景区 探访多纳部落文化之美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106112.md#1">跨县市交流带动城市发展 黄敏惠率团赴新北</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/25/n10809395.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075338.md#1">女子濒死见到已故亲人 上帝要她带话回人间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074471.md#1">仁心君子：救助仇人活命  不爱宰相高位爱真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073092.md#1">因诗赋而独步后宫的晋代才女左棻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079524.md#1">【车评】越野领航员 2023 Honda Pilot TrailSport</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079467.md#1">【马克时空】绍伊古访朝伊看武器 黑海舰队遭轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079385.md#1">【新闻大破解】全球助台反共 台恢复UN地位？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078601.md#1">岳山：邓朴方彻底退场 习近平“加把锁”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078482.md#1">大陆天才儿童10岁读大学16岁读博 28岁躺平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078126.md#1">杭州亚运前 习近平访义乌 安保布局引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078773.md#1">袁咏仪育儿受挫看心理医生 不敢再叫爱子小名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078045.md#1">59岁张曼玉近况曝光 生日惊喜拍片吐心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078736.md#1">赵又廷谈4岁爱女长相 一句感慨笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077984.md#1">陆男星张鲁一被曝失联 老婆和剧组均联系不上</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078076.md#1">遭封杀两年 张哲瀚大马开唱 望重拾演员身份</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078949.md#1">iPhone这个功能可以助眠 很多人不知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061510.md#1">中医的“肝”比西医的多一功能 很重要！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077230.md#1">最新病毒更易侵犯疫苗接种者？专家：快补这些营养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070611.md#1">台教授罹癌后更健康 抗癌3法宝 这1宝最重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077678.md#1">不用柔软剂 如何让毛巾保持柔软？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/23/n14079780.htm">环境部加严粒状物管制 修正新制113年上路</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079780.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
